@@ -1,5 +1,6 @@
   - Escape special characters in user/role names
   - Use the stored user credentials to look up roles
+  - Split credential checking into a separate method from generic binding
 
 1.014 26 April 2013
   - Don't fall back to unauthenticated bind when authenticating
